# XClaw-Agentic-Godot-Game-Engine

./: .env.local.example  .gitignore  .gitmodules  .model-optimization.config.json  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  IMPLEMENTED-FEATURES-LIST.md  LICENSE  README.md  README_EN.md  ROADMAP.md  SECURITY.md  WORKFLOW.md  create_it.py  demo_1_visual.py  demo_2_ui.py  demo_3_rollback.py  docker-compose.vibe-baseline.yml  eslint.config.js  fix.py  fix2.py  fix_brace.py  fix_bridge_prints.py  fix_builder.py  fix_dollar.py  fix_dupe.py  fix_gd.py  fix_gd2.py  fix_gd3.py  fix_godot_logging.py  fix_paths.py  fix_payload.py  fix_planner_syntax.py  fix_prompt.py  fix_schemas.py  fix_server.py  (+45 more)
mcp-server/: INFORME_ERRORES.md  TOOLS.md  pyproject.toml
mcp-server/src/: __init__.py  main.py  mcp_resources.py  mcp_tools.py  rpc_client.py  schemas.py  security.py
rust/engine/: .gitignore  BUILD_OPTIMIZATION_SUMMARY.md  CLAUDE.md  Cargo.toml  README.md
rust/engine/.cargo/: config.toml
rust/engine/crates/: CLAUDE.md
rust/engine/crates/assets/: Cargo.toml
rust/engine/crates/assets/src/: geometry_math.rs  geometry_meta.rs  gltf_loader.rs  lib.rs  material.rs  material_test.rs  mesh_cache.rs  primitives.rs  primitives_cylinders.rs  primitives_decorative.rs  primitives_environment.rs  primitives_math.rs  primitives_platonic.rs  primitives_structural.rs  primitives_torus.rs  procedural_shape_registry.rs  texture_cache.rs  vertex.rs  vertex_builder.rs
rust/engine/crates/audio/: Cargo.toml  README.md
rust/engine/crates/audio/src/: audio_manager.rs  lib.rs  spatial_audio.rs
rust/engine/crates/ecs-bridge/: CLAUDE.md  Cargo.toml
rust/engine/crates/ecs-bridge/docs/: PREFAB_SYSTEM_DESIGN.md
rust/engine/crates/ecs-bridge/src/: custom_shape_integration_test.rs  lib.rs  prefab_instantiator.rs  prefab_registry.rs  transform_utils.rs
rust/engine/crates/ecs-bridge/src/decoders/: camera.rs  character_controller.rs  common.rs  custom_shape.rs  geometry_asset.rs  instanced.rs  light.rs  lod.rs  material.rs  mesh_collider.rs  mesh_renderer.rs  mod.rs  prefab_instance.rs  script.rs  (+4 more)
rust/engine/crates/ecs-manager/: CLAUDE.md  Cargo.toml
rust/engine/crates/ecs-manager/src/: entity_builder.rs  lib.rs  physics_sync_test.rs  scene_manager.rs  scene_manager_test.rs  stress_test.rs
rust/engine/crates/events/: Cargo.toml
rust/engine/crates/events/src/: bus.rs  integration_test.rs  lib.rs  targeted.rs  types.rs
rust/engine/crates/physics/: CLAUDE.md  Cargo.toml
rust/engine/crates/physics/src/: builder.rs  components.rs  events.rs  lib.rs  scene_integration.rs  world.rs
rust/engine/crates/scene/: CLAUDE.md  Cargo.toml
rust/engine/crates/scene-graph/: CLAUDE.md  Cargo.toml
rust/engine/crates/scene-graph/src/: lib.rs
rust/engine/crates/scene/src/: entity_commands.rs  lib.rs  scene_state.rs
rust/engine/crates/scripting/: Cargo.toml
rust/engine/crates/scripting/src/: hot_reload.rs  lib.rs  lua_runtime.rs  script_prefab_manager.rs  script_system.rs
rust/engine/crates/scripting/testdata/: event_api_demo.lua
rust/engine/crates/scripting/tests/: debug_test.rs  event_api_integration_test.rs  integration_test.rs  json_integration_test.rs  manual_load_test.rs  query_entities_integration_test.rs  scene_event_bus_integration_test.rs  tstl_test.rs
rust/engine/crates/wasm-bridge/: Cargo.toml
rust/engine/crates/wasm-bridge/src/: bridge.rs  diff.rs  ipc.rs  lib.rs
rust/engine/docs/: API_TEST_STATUS.md  ENGINE_ARCHITECTURE.md  INPUT_API_IMPLEMENTATION.md  SCENE_TESTING_GUIDE.md
rust/engine/examples/: bvh_demo.rs  bvh_integration_demo.rs  bvh_performance_test.rs
rust/engine/scripts/: generate_lod_performance_scene.py
rust/engine/scripts/ci/: rust-build-metrics.sh
rust/engine/src/: app_threed.rs  bvh_integration_test.rs  lib.rs  main.rs
rust/engine/src/debug/: CLAUDE.md  colliders.rs  grid.rs  lines.rs  mod.rs
rust/engine/src/ecs/: CLAUDE.md  mod.rs  scene.rs  scene_test.rs
rust/engine/src/ecs/components/: camera.rs  camera_test.rs  light.rs  light_test.rs  mesh_renderer.rs  mesh_renderer_test.rs  mod.rs  transform.rs  transform_test.rs
rust/engine/src/input/: CLAUDE.md  actions.rs  keyboard.rs  manager.rs  mod.rs  mouse.rs  script_bridge.rs
rust/engine/src/io/: CLAUDE.md  loader.rs  mod.rs  schema_validator.rs  validation.rs
rust/engine/src/renderer/: CLAUDE.md  audio_loader.rs  bvh_debug.rs  bvh_integration.rs  camera_follow.rs  camera_loader.rs  camera_renderer.rs  constants.rs  coordinate_conversion.rs  debug_gizmos.rs  debug_lines.rs  debug_rendering.rs  enhanced_lights.rs  entity_loader.rs  instanced_loader.rs  light_loader.rs  light_loader_test.rs  lighting.rs  lighting_test.rs  lod_manager.rs  lod_selector.rs  material_manager.rs  material_manager_test.rs  material_overrides.rs  material_update.rs  mesh_filtering.rs  mesh_loader.rs  mod.rs  orbital_camera.rs  physics_sync.rs  pivot_centering.rs  post_process_targets.rs  post_processing.rs  primitive_mesh.rs  render_settings.rs  scene_loader.rs  scene_utilities.rs  screen_overlay.rs  skybox.rs  terrain_generator.rs  (+4 more)
rust/engine/src/spatial/: CLAUDE.md  bvh_manager.rs  intersect.rs  mesh_bvh.rs  mod.rs  primitives.rs  scene_bvh.rs  scripting_adapter.rs
rust/engine/src/terrain/: mod.rs  noise.rs  normals.rs  utils.rs
rust/engine/src/threed/: CLAUDE.md  mod.rs  threed_camera_manager.rs  threed_context_state.rs  threed_light_manager.rs  threed_light_manager_test.rs  threed_mesh_manager.rs  threed_render_coordinator.rs  threed_renderer.rs  threed_renderer_test.rs  threed_scene_loader_state.rs
rust/engine/src/util/: CLAUDE.md  mod.rs  screenshot.rs  time.rs  time_test.rs
rust/engine/tests/: camera_integration_test.rs  lod_integration_test.rs  physics_integration_test.rs  shadow_integration_simple_test.rs  shadow_pipeline_documentation_test.rs
rust/engine/xtask/: Cargo.toml
rust/engine/xtask/src/: main.rs
rust/engine/xtask/src/commands/: build_metrics.rs  ci_build.rs  feature_matrix.rs  mod.rs  size_report.rs
rust/engine/xtask/src/util/: cmd.rs  mod.rs
(+1692 files in other folders)
