[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "godot-mcp-bridge"
version = "1.0.0"
description = "MCP Server for Godot Editor integration with Cursor AI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GodotBridge"}
]
dependencies = [
    "mcp>=1.0.0",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.scripts]
godot-mcp-bridge = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
