[package]
name = "vibe-ecs-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Math
glam = "0.27"

# Internal dependencies
vibe-scene = { path = "../scene" }

[dev-dependencies]
vibe-assets = { path = "../assets" }
