[package]
name = "vibe-ecs-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
vibe-scene = { path = "../scene" }
vibe-physics = { path = "../physics" }
vibe-ecs-bridge = { path = "../ecs-bridge" }
vibe-events = { path = "../events" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
glam = { version = "0.27", features = ["serde"] }

[dev-dependencies]
