[package]
name = "vibe-scripting"
version = "0.1.0"
edition = "2021"

[dependencies]
# Internal workspace dependencies
vibe-scene = { path = "../scene" }
vibe-ecs-bridge = { path = "../ecs-bridge" }
vibe-ecs-manager = { path = "../ecs-manager" }
vibe-scene-graph = { path = "../scene-graph" }
vibe-audio = { path = "../audio" }
vibe-events = { path = "../events" }

# Lua runtime (vendored = bundle Lua source, no system dependency required)
mlua = { version = "0.11", features = ["lua54", "send", "serialize", "vendored"] }

# Math
glam = { version = "0.27", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Lazy static initialization for event bus
once_cell = "1.19"

# Serialization (for script parameters)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File watching for hot-reload (optional feature)
notify = { version = "6.1", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
hot-reload = ["notify"]

[lib]
name = "vibe_scripting"
path = "src/lib.rs"
