[package]
name = "vibe-wasm-bridge"
version = "0.1.0"
edition = "2021"

[features]
default = []
wasm = ["dep:wasm-bindgen", "dep:js-sys"]

[dependencies]
vibe-scene = { path = "../scene" }
vibe-ecs-bridge = { path = "../ecs-bridge" }
vibe-scene-graph = { path = "../scene-graph" }

anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# WASM support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[dev-dependencies]
